# lazy-template

./: .editorconfig  Cargo.toml  README.md  check-all.bash  justfile
.github/: FUNDING.yml
.github/workflows/: test.yaml
examples/: println.rs
src/: enclosed.rs  errors.rs  iter.rs  lib.rs  parse.rs  render.rs  respond.rs  segment.rs  shorthands.rs  syntax.rs  system.rs  template.rs  utils.rs
src/enclosed/: config.rs  parser.rs  segment.rs  simple_escape.rs  simple_query.rs  simple_template.rs  simple_template_system.rs
src/errors/: skip_or_fatal.rs
src/iter/: eager_parse_iter.rs  lazy_parse_iter.rs  segment_iter.rs
src/shorthands/: simple_curly_braces.rs
src/template/: std_extensions.rs
tests/: rust_version.rs  simple_escape.rs  type_inference.rs
