[package]
name = "lazy-template"
version = "0.0.0"
edition = "2021"

[features]
default = ["std"]
std = []

[dependencies]
derive_more = { version = "1.0.0", default-features = false, features = ["display", "error", "into_iterator"] }
pipe-trait = "0.4.0"
split-first-char = "0.0.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
