[package]
name = "lazy-template"
description = "String template library that send queries to function responder and interpolate the responses"
version = "0.0.0"
repository = "https://github.com/KSXGitHub/lazy-template.git"
documentation = "https://docs.rs/lazy-template"
authors = ["khai96_ <hvksmr1996@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = [
  "template",
  "string",
  "interpolation",
  "lazy",
]
categories = [
  "no-std",
  "template-engine",
  "parsing",
  "parser-implementations",
]
edition = "2021"
include = [
  "/src",
  "/Cargo.toml",
  "/LICENSE.md",
  "/LICENSE.md",
]

[features]
default = ["std"]
std = []

[dependencies]
derive_more = { version = "1.0.0", default-features = false, features = ["display", "error", "into_iterator"] }
pipe-trait = "0.4.0"
split-first-char = "0.0.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
